--- a/feed/index.html
+++ b/feed/index.html
@@ -3,16 +3,17 @@ title: 关于
 layout: news
 
 ---
+<div class="panel panel-primary">
+  <div class="panel-heading">联系方式</div>
+  <div class="panel-body">
 
-<div>
-  邮箱：dgrawl@163.com
-</div>
+  	<ul class="list-group">
+  <li class="list-group-item">地址：广东省东莞市南城区周溪大道9号</li>
+  <li class="list-group-item">电话：0769-26382052</li>
+  <li class="list-group-item">手机：18925526212</li>
+  <li class="list-group-item">联系人：王经理</li>
+  <li class="list-group-item">邮箱：ra_ron@163.com</li>
+</ul>
 
-<div>
-  QQ：516407622
-</div>
 
-
-
-<br>
-<br><br>
+</div></div>
